game-javac.err
src\game\GameController.java:78: error: constructor GameServer in class GameServer cannot be applied to given types;
			GameServer server = new GameServer(portNumber);
			                    ^
  required: no arguments
  found: String
  reason: actual and formal argument lists differ in length
1 error
